# programming_techniques

./: .gitignore
Exercise1/: CMakeLists.txt  README.TXT  change.cpp  fibonacci_iterative.cpp  fibonacci_recursive.cpp  triangular.cpp  walking_stairs.cpp
Exercise2/: CMakeLists.txt  aufgab2_1.txt  dirinfo.cpp  fileio.cpp  game_of_life.cpp
Exercise2/data/: README_Dataset.txt
Exercise3/: CMakeLists.txt  README.TXT  emailcheck.cpp  exceptions.cpp  sniffer_dog.cpp
Exercise3/data/: weather_babelsberg.csv
Exercise4/: CMakeLists.txt  README.TXT  functionwrapping.cpp  genetic-tsp.cpp  mapreduce.cpp
Exercise4/data/: README_Airports.txt  README_Routes.txt
Exercise5/: CMakeLists.txt  burger.cpp  iterators.cpp  search.cpp  sort.cpp
Exercise5/data/: orders.txt  routes.csv
Exercise6/: CMakeLists.txt  prim.cpp  schedule.cpp  toh.cpp
Exercise7/: CMakeLists.txt  account.cpp  amount.cpp  producerconsumer.cpp  vector.cpp
